<resources>
    <string name="app_name">MyNews</string>
    <string name="search">Search</string>
    <string name="parameters">Parameters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_stories">Top Stories</string>
    <string name="article_image">Article Image</string>
    <string name="keyword">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="search_button">SEARCH</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day) ?</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="textHelp">
        <b>Welcome in MyNews App !</b>
        \n \n
        <b>How to use this app ?</b>
        \n
        Once the app launched, you can see the lasts articles from New York Times in category Top Stories.\n
        You can navigate in the four tabs, which are Top Stories, Most Popular, Science ans Technology.\n \n

        The search icon leads you to the search page : you can write a keyword you want to search. Moreover,
        you can specify one or multiple filter to your search, and a range of date. Once the search launched, articles from New York Times
        that match with your criterions will appear. \n
        Caution : if nothing appear, there is no article that match, try to expand your search.

        The option icon can lead you to the notification page : here you can, as the search page, specify
        criterions to be notified once per day if new articles match.

        Thanks for your download ! ;)
    </string>
    <string name="new_york_times_logo">New York Times Logo</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_back_button">Navigate up</string>
    <string name="cancel">Cancel</string>
    <string name="error_keyword_checkboxes">You must enter a keyword and check at least one category !</string>
</resources>
