<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_checkboxes_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/linear_layout_dates">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_arts_1"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/arts"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_dates" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_business_2"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/business"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_search_checkbox_arts_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_entrepreneurs_3"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/entrepreneurs"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_search_checkbox_business_2" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_politics_4"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/politics"
            app:layout_constraintLeft_toRightOf="@id/fragment_search_checkbox_arts_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_dates" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_sports_5"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/sports"
            app:layout_constraintLeft_toRightOf="@id/fragment_search_checkbox_arts_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_search_checkbox_politics_4" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fragment_search_checkbox_travel_6"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/travel"
            app:layout_constraintLeft_toRightOf="@id/fragment_search_checkbox_arts_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_search_checkbox_sports_5" />

    </LinearLayout>
</LinearLayout>