<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_activity_main_params"
        android:icon="@drawable/ic_more_vert_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/parameters">
        <menu>
            <item
                android:id="@+id/menu_activity_main_notifications"
                android:title="@string/notifications"/>
            <item
                android:id="@+id/menu_activity_main_help"
                android:title="@string/help"/>
            <item
                android:id="@+id/menu_activity_main_about"
                android:title="@string/about"/>

        </menu>
    </item>
</menu>