...
    <include
        layout="@layout/toolbar"/>

    <FrameLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:id="@+id/activity_search_framelayout"/>

</LinearLayout>
